--- a/.env.dev
+++ b/.env.dev
@@ -3,8 +3,8 @@ AMBIENTE_PROCESSO='desenvolvimento'
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
 DB_DATABASE=air_guard
-DB_USER=webdataviz
-DB_PASSWORD='Sptech#2024'
+DB_USER=root
+DB_PASSWORD='22418907Aeiou.'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
