--- a/.env.dev
+++ b/.env.dev
@@ -1,12 +1,16 @@
 AMBIENTE_PROCESSO='desenvolvimento'
 
 # Configurações de conexão com o banco de dados
-DB_HOST=localhost
+DB_HOST=10.18.32.69
 DB_DATABASE=air_guard
-DB_USER=webdataviz
+DB_USER='dataquino'
 DB_PASSWORD='Sptech#2024'
-DB_PORT=3306
+DB_PORT=3307
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
 APP_HOST=localhost
+
+# Configuração da bob IA
+
+IA_KEY='AIzaSyAwLTS6bzw17fpxKdxe0h2tYprSiEECHAg'
