--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,11 @@
 AMBIENTE_PROCESSO='desenvolvimento'
 
 # Configurações de conexão com o banco de dados
-DB_HOST=10.18.32.51
+DB_HOST=localhost
 DB_DATABASE=air_guard
 DB_USER=webdataviz
 DB_PASSWORD='Sptech#2024'
-DB_PORT=3307
+DB_PORT=3306
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
